--- a/formulario.html
+++ b/formulario.html
@@ -1,1 +1,38 @@
 <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CADASTRO</title>
+</head>
+
+<body>
+    <div>
+        <h1>
+            Formulario
+        </h1>
+        <p>Cadrastre suas informações</p>
+        <br>
+    </div>
+    <form>
+        <fieldset>
+            <div>
+                <label>Nome</label>
+                <input type="text" name="Nome" id="Nome">
+            </div>
+            <div>
+                <label>Sobrenome</label>
+                <input type="text" name="Sobrenome" id="Sobrenome">
+            </div>
+            <div>
+            <label>Email</label>
+            <input type="email" name="Email" id="Email">
+            </div>
+        </fieldset>
+    </form>
+
+</body>
+
+</html>
