--- a/formulario.html
+++ b/formulario.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <h1>
-            Formulario
+            Cadrastro de DEVs
         </h1>
         <p>Cadrastre suas informações</p>
         <br>
@@ -27,10 +27,20 @@
                 <input type="text" name="Sobrenome" id="Sobrenome">
             </div>
             <div>
-            <label>Email</label>
-            <input type="email" name="Email" id="Email">
+                <label>Email</label>
+                <input type="email" name="Email" id="Email">
             </div>
         </fieldset>
+        <div>
+            <label>De qual lado da aplicação você desenvolve?</label>
+            <label> <input type="radio" name="devweb" value="frontend"> Front-End </label>
+            <label> <input type="radio" name="devweb" value="backend"> Back-end </label>
+            <label> <input type="radio" name="devweb" value="fullstack"> Fullstack </label>
+        </div>
+        <div>
+            <label>Senoridade</label>
+            <select id="Senoridade"></select>
+        </div>
     </form>
 
 </body>
