--- a/formulario.html
+++ b/formulario.html
@@ -37,9 +37,27 @@
             <label> <input type="radio" name="devweb" value="backend"> Back-end </label>
             <label> <input type="radio" name="devweb" value="fullstack"> Fullstack </label>
         </div>
+        <fieldset>
+            <div>
+                <label>Selecione as tecnologias que você utiliza:</label><br>
+                <input type="checkbox" id="tecnologia1" name="tecnologia1" value="HTML">
+                <label for="tecnologia1">HTML</label>
+                <input type="checkbox" id="tecnologia2" name="tecnologia2" value="CSS">
+                <label for="tecnologia2">CSS</label>
+                <input type="checkbox" id="tecnologia3" name="tecnologia3" value="JavaScript">
+                <label for="tecnologia3">JavaScript</label>
+                <input type="checkbox" id="tecnologia4" name="tecnologia4" value="PHP">
+                <label for="tecnologia4">CSS</label>
+                <input type="checkbox" id="tecnologia5" name="tecnologia5" value="Python">
+                <label for="tecnologia5">Python</label>
+                <input type="checkbox" id="tecnologia6" name="tecnologia6" value="Java">
+                <label for="tecnologia6">Java</label>
+        </fieldset>
+        </div>
         <div>
-            <label>Senoridade</label>
-            <select id="Senoridade"></select>
+            <label>Conte um pouco da sua experiência:</label>
+            <input type="text" width="26em" >
+            
         </div>
     </form>
 
