--- a/formulario.html
+++ b/formulario.html
@@ -57,8 +57,8 @@
         <div>
             <label>Conte um pouco da sua experiência:</label>
             <input type="text" width="26em" >
-            
         </div>
+        <button type="submit">Enviar</button>
     </form>
 
 </body>
