--- a/formulario.html
+++ b/formulario.html
@@ -37,9 +37,18 @@
             <label> <input type="radio" name="devweb" value="backend"> Back-end </label>
             <label> <input type="radio" name="devweb" value="fullstack"> Fullstack </label>
         </div>
+        <div>
+            <label>Senoridade:</label>
+            <select id="Senoridade">
+                <option selected disabled></option>
+                <option>Junior</option>
+                <option>Pleno</option>
+                <option>Senior</option>
+            </select>
+        </div>
         <fieldset>
             <div>
-                <label>Selecione as tecnologias que você utiliza:</label><br>
+                <label>Selecione as tecnologias que você utiliza:</label>
                 <input type="checkbox" id="tecnologia1" name="tecnologia1" value="HTML">
                 <label for="tecnologia1">HTML</label>
                 <input type="checkbox" id="tecnologia2" name="tecnologia2" value="CSS">
@@ -56,7 +65,7 @@
         </div>
         <div>
             <label>Conte um pouco da sua experiência:</label>
-            <input type="text" width="26em" >
+            <input type="text" width="26em">
         </div>
         <button type="submit">Enviar</button>
     </form>
