--- a/formulario.html
+++ b/formulario.html
@@ -41,7 +41,7 @@
         <div class="campo">
             <label for="senoridade"><strong>Senoridade:</strong></label>
             <select id="Senoridade">
-                <option selected disabled></option>
+                <option selected disabled>Selecione</option>
                 <option>Junior</option>
                 <option>Pleno</option>
                 <option>Senior</option>
@@ -66,9 +66,9 @@
         </div>
         <div class="campo">
             <label><strong>Conte um pouco da sua experiência:</strong></label>
-            <input type="text" width="26em">
+            <input type="text" size="33px" >
         </div>
-        <button class="button" type="submit">Enviar</button>
+        <button class="botao" type="submit">Enviar</button>
     </form>
 
 </body>
